created .env file and added client id and client secret to both google and github

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=68018732648-80t2icbcsn2ooisgipua4l7di6e84tne.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=tvbayEaMaeE0fGdBKitD44AR
+
+
+GITHUB_CLIENT_ID=b890320e5e060ba3ea08
+GITHUB_CLIENT_SECRET=87aba6eedae45d80a2d8c13793c099b9547cf91e
